--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,18 @@ version: '3'
 
 services:
   app:
-    container_name: confianza-publica-app
+    container_name: sunchales-app
     build: .
     command: ["./node_modules/.bin/gulp", "bws"]
     environment:
       - NODE_ENV=development
       - DEBUG=democracyos*
-      - MONGO_URL=mongodb://localhost:27017/lala
-      - JWT_SECRET=6BB8C00A05ECEA4C04E81BEFB13B9FBBC3175E47839644CCC1CCA1D4641FB980FBBC3175E47839644CCC1CCA1D4641FB980
-      - NOTIFICATIONS_NODEMAILER={"host":"smtp.mailtrap.io","port":2525,"auth":{"user":"a25e4cb76d8eb0","pass":"f304115d9cf487"},"maxConnections":1,"rateLimit":"true","pool":"true","maxMessages":1}
-      - PORT=3000
-      - STAFF=guillermocroppi@gmail.com
-      - NOTIFICATIONS_MAILER_EMAIL=guillermocroppi@gmail.com
-
+      - MONGO_URL=mongodb://mongo:27017/myDatabase
+      - STAFF=hello@organization.org
+      - NOTIFICATIONS_MAILER_EMAIL=hello@organization.org
+      - NOTIFICATIONS_MAILER_NAME='My organization name'
+      - JWT_SECRET=*****PleaseChangeThis
+      - NOTIFICATIONS_NODEMAILER={"host":"********","port":****,"auth":{"user":"*****","pass":"*****"}}
       # - CUSTOM_SIGNIN=true/false
       # - OIDC_ISSUER=**************
       # - OIDC_AUTH=**************
@@ -35,8 +34,6 @@ services:
       - ./dos-override/api-v2/db-api/comments/index.js:/usr/src/lib/api-v2/db-api/comments/index.js
       - ./dos-override/api-v2/db-api/comments/scopes.js:/usr/src/lib/api-v2/db-api/comments/scopes.js
     tty: true
-    network_mode: "host"
-
 
   # mongo:
   #   container_name: sunchales-mongo
